--- a/paper/sources.bib
+++ b/paper/sources.bib
@@ -6,3 +6,83 @@
     volume=2283,
     year=2002
 }
+
+@article{hybrid_logic_afp,
+  author  = {Asta Halkjær From},
+  title   = {Formalizing a Seligman-Style Tableau System for Hybrid Logic},
+  journal = {Archive of Formal Proofs},
+  month   = {December},
+  year    = {2019},
+  note    = {\url{https://isa-afp.org/entries/Hybrid_Logic.html},
+            Formal proof development},
+  ISSN    = {2150-914x},
+}
+
+@article{fast_tableau_set_theory,
+  title={A New Fast Tableau-Based Decision Procedure for an Unquantified Fragment of Set Theory},
+  ISBN={9783540465089},
+  ISSN={0302-9743},
+  url={http://dx.doi.org/10.1007/3-540-46508-1_8},
+  DOI={10.1007/3-540-46508-1_8},
+  journal={Lecture Notes in Computer Science},
+  publisher={Springer Berlin Heidelberg},
+  author={Cantone Domenico and Zarba Calogero G.},
+  year={2000},
+  pages={126–136}
+}
+
+@book{set_theory_for_computing,
+  title={Set theory for computing: from decision procedures to declarative programming with sets},
+  author={Cantone, Domenico and Omodeo, Eugenio and Policriti, Alberto},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{tableau_quantifier_free,
+  title={A Tableau Calculus for Quantifier-Free Set Theoretic Formulae},
+  ISBN={9783540697787},
+  ISSN={0302-9743},
+  url={http://dx.doi.org/10.1007/3-540-69778-0_16},
+  DOI={10.1007/3-540-69778-0_16},
+  journal={Automated Reasoning with Analytic Tableaux and Related Methods},
+  publisher={Springer Berlin Heidelberg},
+  author={Beckert Bernhard and Hartmer Ulrike},
+  year={1998},
+  pages={93–107},
+}
+
+@thesis{tableau_quantifier_free_diploma,
+  title={Erweiterung des Tableaukalküls mit freien Variablen um die Behandlung von Mengentheorie},
+  author={Hartmer, Ulrike},
+  year={1997},
+  school={Universität Karlsruhe},
+  type = {Diploma thesis}
+}
+
+@article{zfc_in_hol,
+  author    = {Lawrence C. Paulson},
+  title     = {Wetzel: Formalisation of an Undecidable Problem Linked to the Continuum
+               Hypothesis},
+  journal   = {CoRR},
+  volume    = {abs/2205.03159},
+  year      = {2022},
+  url       = {https://doi.org/10.48550/arXiv.2205.03159},
+  doi       = {10.48550/arXiv.2205.03159},
+  eprinttype = {arXiv},
+  eprint    = {2205.03159},
+  timestamp = {Wed, 11 May 2022 17:29:40 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2205-03159.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{zfc_in_hol_afp,
+  author  = {Lawrence C. Paulson},
+  title   = {Zermelo Fraenkel Set Theory in Higher-Order Logic},
+  journal = {Archive of Formal Proofs},
+  month   = {October},
+  year    = {2019},
+  note    = {\url{https://isa-afp.org/entries/ZFC_in_HOL.html},
+            Formal proof development},
+  ISSN    = {2150-914x},
+}
+
